Add messages and their traduction for missing graphical editor actions.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -10,8 +10,11 @@ Actor=Actor
 Actors=Actors
 Add=Add
 AddIndicator=Add indicator
+AddInputFlow=Add input flow
 AddNewChildCategory=Add new child category
 AddNewRepository=Add new repository
+AddOutputFlow=Add output flow
+AddProcess=Add process
 AddScore=Add score
 AddSection=Add section
 AddToMethodParameters=Add to method parameters
@@ -247,6 +250,7 @@ EcoSpold2Export=EcoSpold 2 Export
 EcoSpoldConfiguration=EcoSpold Configuration
 Economic=Economic
 Edit=Edit
+EditFlow=Edit flow
 ElementaryFlow=Elementary flow
 Email=Email
 EmptyDatabase=Empty database
@@ -391,8 +395,8 @@ ImportEcoSpold01DataSets=Import EcoSpold 01 data sets
 ImportEcoSpold02DataSets=Import EcoSpold 02 data sets
 ImportEcoSpoldGeographies=Import EcoSpold2 geographies
 ImportILCD=Import ILCD
-ImportRemoteDataset=Import remote dataset
 ImportKMLGeographies=Import KML geographies
+ImportRemoteDataset=Import remote dataset
 ImportingKMLData=Importing KML data
 ImportingXMLData=Importing XML (EcoSpold2 format) data
 IncludeCostCalculation=Include cost calculation
@@ -436,8 +440,8 @@ IsProtected=Is protected
 IsReference=Is reference
 IsWithCosts=Is with costs
 IsWithRegionalization=Is with regionalization
-KeepLocalDataset=Keep local dataset
 KeepDatasetDeleted=Keep dataset deleted
+KeepLocalDataset=Keep local dataset
 KmlEditor=KML Editor
 LCCAddedValuesTable=LCC\: Added values table
 LCCNetcostsTable=LCC\: Net-costs table
@@ -595,19 +599,19 @@ OutOfMemory=Out of memory
 Output=Output
 OutputResults=Inventory results (emissions)
 Outputs=Outputs
-OverwriteLocalChanges=Overwrite local changes
-OverwriteRemoteChanges=Overwrite remote changes
 OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
+OverwriteLocalChanges=Overwrite local changes
+OverwriteRemoteChanges=Overwrite remote changes
 Parameter=Parameter
 ParameterAlreadyAdded=Parameter already added
 ParameterDescriptionTable=Parameter description table
 ParameterScope=Parameter scope
+ParameterSets=Parameter sets
 ParameterValueTable=Parameter value table
 ParameterWithSameNameExists=A parameter with the same name already exists
 ParameterWithSameNameExistsInMethod=A parameter with the same name already exists in this LCIA method
 Parameters=Parameters
-ParameterSets=Parameter sets
 Password=Password
 Paste=Paste
 Pcr=PCR
@@ -819,8 +823,10 @@ StandardDeviation=Standard deviation
 StandardDeviationFormula=Standard deviation (formula)
 Start=Start
 StartDate=Start date
+StartIPCInfo=Click on the `run` button to start the IPC server.
 StartIPCServer=Start an IPC Server
 Statistics=Statistics
+StopIPCInfo=The IPC server is running. Click on the `stop` button or close this dialog to stop it.
 StoreInventoryResult=Store inventory result
 SubCategory=Sub-category
 SubgroupByProcesses=Subgroup by processes
@@ -921,5 +927,3 @@ WithPassword=With password
 Year=Year
 Yes=Yes
 ZipCode=Zip code
-StartIPCInfo=Click on the `run` button to start the IPC server.
-StopIPCInfo=The IPC server is running. Click on the `stop` button or close this dialog to stop it.
