--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -8,7 +8,10 @@ Actor=Actor
 Actors=Actors
 Add=Afegir
 AddIndicator=Afegir indicador
+AddInputFlow=Afegir un flux d'entrada
 AddNewChildCategory=Afegir nova subcategoria
+AddOutputFlow=Afegir un flux de sortida
+AddProcess=Afegir proc\u00E9s
 AddScore=Afegir puntuaci\u00F3
 AddSection=Afegir secci\u00F3
 AddToMethodParameters=Afegir als par\u00E0metres del m\u00E8tode
@@ -204,6 +207,7 @@ EcoSpold2Export=Exportar EcoSpold 2
 EcoSpoldConfiguration=Configuraci\u00F3 EcoSpold
 Economic=Econ\u00F2mic
 Edit=Editar
+EditFlow=Editar el flux
 ElementaryFlow=Flux elemental
 Email=Correu electr\u00F2nic
 EmptyDatabase=Base de dades buida
