--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
@@ -9,7 +9,10 @@ Actor=Kontakt
 Actors=Kontakte
 Add=Hinzuf\u00FCgen
 AddIndicator=Indikator hinzuf\u00FCgen
+AddInputFlow=Eingabefluss hinzuf\u00FCgen
 AddNewChildCategory=Unterkategorie hinzuf\u00FCgen
+AddOutputFlow=Ausgabefluss hinzuf\u00FCgen
+AddProcess=Prozess hinzuf\u00FCgen
 AddScore=Indikatorwert hinzuf\u00FCgen
 AddSection=Abschnitt hinzuf\u00FCgen
 AddToMethodParameters=Zu Methoden-Parametern hinzuf\u00FCgen 
@@ -220,6 +223,7 @@ EcoSpold2Export=EcoSpold 2 Export
 EcoSpoldConfiguration=EcoSpold Einstellungen
 Economic=\u00D6konomisch
 Edit=Bearbeiten
+EditFlow=Fluss bearbeiten
 ElementaryFlow=Elementarfluss
 Email=E-Mail
 EmptyDatabase=Leere Datenbank
@@ -401,7 +405,6 @@ LayoutAs=Als {0} anordnen
 LciaCategoryDescriptionTable=Tabelle mit Beschreibung der LCIA-Kategorien
 LciaResultTable=Wirkungsabsch\u00E4tzungs-Ergebnistabelle
 LibgfortanInfo=openLCA benutzt eine native Mathebibliothek f\u00FCr bessere Rechenleistung. F\u00FCr Linux wird die Installation des Pakets libgfortran3 ben\u00F6tigt, was auf Ihrem System nicht der Fall zu sein scheint. Wir empfehlen dieses Paket zu installieren, wenn Sie von der verbesserten Rechenleistung von openLCA profitieren m\u00F6chten. Wenn Sie ein Ubuntu System benutzen, versuchen Sie das Paket mit\u00A0'apt-get install libgfortran3' zu installieren
-RestrictedDataSets=Zugangsbeschränkte Datens\u00E4tze
 Line=Linie
 Local=Lokal
 LocalDatabase=Lokale Datenbank
@@ -627,6 +630,7 @@ ResetAll=Alle zur\u00FCcksetzen
 ResetSelection=Auswahl zur\u00FCcksetzen
 Resize=Gr\u00F6\u00DFe \u00E4ndern
 RestoreDatabase=Datenbank wiederherstellen
+RestrictedDataSets=Zugangsbeschr\u00E4nkte Datens\u00E4tze
 Result=Ergebnis
 Results=Ergebnisse
 ResultsOf=Ergebnisse f\u00FCr
