--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
@@ -8,7 +8,10 @@ Actor=K\u00F6zrem\u0171k\u00F6d\u0151
 Actors=K\u00F6zrem\u0171k\u00F6d\u0151k
 Add=Hozz\u00E1ad
 AddIndicator=Indik\u00E1tor hozz\u00E1ad\u00E1sa
+AddInputFlow=Bemeneti \u00E1raml\u00E1s hozz\u00E1ad\u00E1sa
 AddNewChildCategory=\u00DAj alkateg\u00F3ria hozz\u00E1ad\u00E1sa
+AddOutputFlow=Kimeneti \u00E1raml\u00E1s hozz\u00E1ad\u00E1sa
+AddProcess=R\u00E9szfolyamat hozz\u00E1ad
 AddScore=Pontsz\u00E1m hozz\u00E1ad\u00E1sa
 AddSection=Szakasz hozz\u00E1ad\u00E1sa
 AddToMethodParameters=Hozz\u00E1ad\u00E1s m\u00F3dszerparam\u00E9terekhez
@@ -217,6 +220,7 @@ EcoSpold2Export=EcoSpold 2 export
 EcoSpoldConfiguration=EcoSpold be\u00E1ll\u00EDt\u00E1sok
 Economic=Gazdas\u00E1gi
 Edit=Szerkeszt\u00E9s
+EditFlow=\u00C1ram szerkeszt\u00E9s 
 ElementaryFlow=Elemi \u00E1ram
 Email=e-mail
 EmptyDatabase=\u00DCres adatb\u00E1zis
