--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -8,7 +8,10 @@ Actor=Autore
 Actors=Autori
 Add=Aggiungi
 AddIndicator=Aggiungi indicatore
+AddInputFlow=Aggiungi flusso di ingresso
 AddNewChildCategory=Aggiungi una nuova sotto categoria
+AddOutputFlow=Aggiungi flusso di uscita
+AddProcess=Aggiungi processo
 AddScore=Aggiungi punteggio
 AddSection=Aggiungi sezione
 AddToMethodParameters=Aggiungi ai parametri del metodo
@@ -210,6 +213,7 @@ EcoSpold2Export=Esporta in formato EcoSpold 2
 EcoSpoldConfiguration=Configurazione EcoSpold
 Economic=Economica
 Edit=Modifica
+EditFlow=Modifica flusso
 ElementaryFlow=Flusso elementare
 Email=e-mail
 EmptyDatabase=Vuoto
