--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -8,7 +8,10 @@ Actor=Ator
 Actors=Atores
 Add=Adicionar
 AddIndicator=Adicionar indicador
+AddInputFlow=Adicionar fluxo de entrada
 AddNewChildCategory=Adicionar nova Categoria prim\u00E1ria
+AddOutputFlow=Adicionar fluxo de sa\u00EDda
+AddProcess=Adicionar processo
 AddScore=Adicionar pontua\u00E7\u00E3o
 AddSection=Adicionar sess\u00E3o
 AddToMethodParameters=Adicionar aos par\u00E2metros do m\u00E9todo
@@ -217,6 +220,7 @@ EcoSpold2Export=Exportar EcoSpold 2
 EcoSpoldConfiguration=Configura\u00E7\u00E3o do\u00A0EcoSpold\u00A0
 Economic=Econ\u00F4mico
 Edit=Editar
+EditFlow=Editar fluxo
 ElementaryFlow=Fluxo elementar
 Email=E-mail
 EmptyDatabase=Banco de dados vazio
