--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -6,7 +6,10 @@ ActivityVariable=Faaliyet de\u011Fi\u015Fkeni
 Actor=Akt\u00F6r
 Actors=Akt\u00F6rler
 Add=Ekle
+AddInputFlow=Giri\u015F ak\u0131\u015F ekle
 AddNewChildCategory=Yeni alt kategori ekle
+AddOutputFlow=\u00C7\u0131k\u0131\u015F ak\u0131\u015F ekle
+AddProcess=Proses ekle
 AddSection=B\u00F6l\u00FCm ekle
 AddToMethodParameters=Metod parametleri ekle
 AddedValue=Katma de\u011Fer
@@ -186,6 +189,7 @@ EcoSpold2Export=EcoSpold 2 d\u0131\u015Fa aktar\u0131m\u0131
 EcoSpoldConfiguration=EcoSpold yap\u0131land\u0131rmas\u0131
 Economic=Ekonomik
 Edit=D\u00FCzelt
+EditFlow=Ak\u0131\u015F d\u00FCzelt
 ElementaryFlow=Temel ak\u0131\u015F
 Email=e-mail
 EmptyDatabase=Bo\u015F veri taban\u0131
