--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=\u4F4D\u7F6E\u7DE8\u78BC\u70BA\u5FC5\u586B
 AccessAndUseRestrictions=\u5B58\u53D6\u548C\u9650\u5236
 ActivityQuantity=\u6D3B\u52D5\u6578\u64DA\u54C1\u8CEA
@@ -8,7 +8,10 @@ Actor=\u53C3\u8207\u8005
 Actors=\u53C3\u8207\u8005\u5011
 Add=\u589E\u52A0
 AddIndicator=\u52A0\u5165\u65B0\u6307\u6A19
+AddInputFlow=\u589E\u52A0\u8F38\u5165\u6D41\u7A0B
 AddNewChildCategory=\u589E\u52A0\u65B0\u7684\u5B50\u985E\u5225
+AddOutputFlow=\u589E\u52A0\u8F38\u51FA\u6D41\u7A0B
+AddProcess=\u589E\u52A0\u5DE5\u5E8F
 AddScore=\u52A0\u5165\u65B0\u8A55\u5206
 AddSection=\u589E\u52A0\u5340\u584A
 AddToMethodParameters=\u589E\u52A0\u65B9\u6CD5\u7684\u53C3\u6578
@@ -217,6 +220,7 @@ EcoSpold2Export=\u532F\u51FA\u81F3EcoSpold 2
 EcoSpoldConfiguration=EcoSpold\u8A2D\u5B9A
 Economic=\u7D93\u6FDF
 Edit=\u7DE8\u8F2F
+EditFlow=\u7DE8\u8F2F\u8F38\u5165
 ElementaryFlow=\u5143\u7D20\u6D41\u7A0B
 Email=\u96FB\u5B50\u4FE1\u7BB1
 EmptyDatabase=\u7A7A\u7684\u8CC7\u6599\u5EAB
