--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -8,7 +8,10 @@ Actor=Actor
 Actors=Actores
 Add=A\u00F1adir
 AddIndicator=A\u00F1adir indicador
+AddInputFlow=A\u00F1adir flujo de entrada
 AddNewChildCategory=A\u00F1adir nueva subcategor\u00EDa
+AddOutputFlow=A\u00F1adir flujo de salida
+AddProcess=A\u00F1adir proceso
 AddScore=A\u00F1adir puntuaci\u00F3n
 AddSection=A\u00F1adir secci\u00F3n
 AddToMethodParameters=A\u00F1adir a los par\u00E1metros del m\u00E9todo
@@ -217,6 +220,7 @@ EcoSpold2Export=Exportar EcoSpold 2
 EcoSpoldConfiguration=Configuraci\u00F3n EcoSpold
 Economic=Econ\u00F3mico
 Edit=Editar
+EditFlow=Editar flujo
 ElementaryFlow=Flujo elemental
 Email=Correo electr\u00F3nico
 EmptyDatabase=Base de datos vac\u00EDa
