--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Mon May 27 17:11:15 CEST 2019
+#Wed Jun 22 10:35:30 CEST 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -8,7 +8,10 @@ Actor=Acteur
 Actors=Acteurs
 Add=Ajouter
 AddIndicator=Ajouter indicateurs
+AddInputFlow=Ajouter un flux entrant
 AddNewChildCategory=Ajouter une nouvelle cat\u00E9gorie enfant
+AddOutputFlow=Ajouter un flux sortant
+AddProcess=Ajouter un proc\u00E9d\u00E9
 AddScore=Ajouter un score
 AddSection=Ajouter une section
 AddToMethodParameters=Ajouter aux param\u00E8tres de m\u00E9thode
@@ -217,6 +220,7 @@ EcoSpold2Export=Export EcoSpold 2
 EcoSpoldConfiguration=Configuration Ecopold
 Economic=Economique
 Edit=Modifier
+EditFlow=Modifier le flux
 ElementaryFlow=Flux primaire
 Email=E-mail
 EmptyDatabase=Base de donn\u00E9es vide
