Create an Action to focus on the reference node.  - The action translates the `Viewport` such that the center of the top of the reference node is placed in the middle of it.  - Creation of message `Focus`.  - (Refactor) The big border sizes necessary to have a pseudo infinit canvas are set on the `SCALABLE_LAYERS`.

--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Wed Jun 22 10:35:30 CEST 2022
+#Thu Jun 30 16:30:04 CEST 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -88,7 +88,7 @@ Comment=commentaire
 Commit=enregistrer
 CommitChangesToRepository=Enregistrer les modifications dans le d\u00E9p\u00F4t
 CommitDate=Validation de la date
-CommitMessage=Message d'enregistrement 
+CommitMessage=Message d'enregistrement
 CommitReferenceNotice=Modifications r\u00E9f\u00E9renc\u00E9es qui doivent \u00E9galement \u00EAtre enregistr\u00E9es
 CommitingChanges=enregistrement des modifications
 Committer=Personne en charge de la validation
@@ -142,7 +142,7 @@ CreatesANewDataQualitySystem=Creer un nouveau syst\u00E8me de qualit\u00E9 des d
 CreatesANewFlow=Cr\u00E9e un nouveau flux
 CreatesANewFlowProperty=Cr\u00E9e une nouvelle propri\u00E9t\u00E9 de flux
 CreatesANewImpactMethod=Cr\u00E9e une nouvelle m\u00E9thode d'impact
-CreatesANewLocation=cr\u00E9e un nouvel emplacement 
+CreatesANewLocation=cr\u00E9e un nouvel emplacement
 CreatesANewParameter=cr\u00E9e un nouveau param\u00E8tre
 CreatesANewProductSystem=Cr\u00E9e un nouveau syst\u00E8me de produit
 CreatesANewProject=Cr\u00E9e un nouveau projet
@@ -278,7 +278,7 @@ Files=Fichiers
 Filter=Filtre
 FilterByName=Filtrer par nom
 Flow=Flux
-FlowContributions=Contributions des flux 
+FlowContributions=Contributions des flux
 FlowContributionsToProcessResults=Contributions des flux aux r\u00E9sultats des proc\u00E9d\u00E9s
 FlowDataQualitySchema=Sch\u00E9ma de la qualit\u00E9 des donn\u00E9es du flux
 FlowDataQualityStatistics=Statistiques de la qualit\u00E9 des donn\u00E9es du flux
@@ -289,6 +289,7 @@ FlowPropertyType=Type de propri\u00E9t\u00E9 du flux
 FlowSchema=Sch\u00E9ma du flux
 FlowType=Type de flux
 Flows=Flux
+Focus=Focus
 Folder=Dossier
 Formula=Formule
 FormulaEvaluationFailed=Echec de l'\u00E9valuation de la formule
@@ -754,7 +755,7 @@ Unit=Unit\u00E9
 UnitAlreadyExistsInUnitGroup=L'unit\u00E9 existe d\u00E9j\u00E0 dans le groupe d'unit\u00E9s {0}
 UnitGroup=Groupe d'unit\u00E9s
 UnitGroups=Groupes d'unit\u00E9s
-UnitIsUsed=L'unit\u00E9 donn\u00E9e est utilis\u00E9e dans les processus, m\u00E9thodes d'impact et indicateurs sociaux 
+UnitIsUsed=L'unit\u00E9 donn\u00E9e est utilis\u00E9e dans les processus, m\u00E9thodes d'impact et indicateurs sociaux
 UnitMappingPage_Description=Veuillez choisir la propri\u00E9t\u00E9 de flux \u00E0 laquelle une unit\u00E9 doit appartenir pour le processus d'importation, et attribuer un facteur de conversion si l'unit\u00E9 est nouvelle.
 UnitOfMeasurement=Unit\u00E9 de mesure
 UnitProcess=Proc\u00E9d\u00E9 d'unit\u00E9
