--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Wed Jun 22 10:35:30 CEST 2022
+#Thu Jun 30 16:30:04 CEST 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -325,6 +325,7 @@ FlowPropertyType=Flow property type
 FlowSchema=Flow schema
 FlowType=Flow type
 Flows=Flows
+Focus=Focus
 Folder=Folder
 Formula=Formula
 FormulaEvaluationFailed=Formula evaluation failed
