Added label for impact category search

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -749,7 +749,8 @@ SearchInCurrencies=Search in currencies
 SearchInDataQualitySystems=Search in data quality systems
 SearchInFlowProperties=Search in flow properties
 SearchInFlows=Search in flows
-SearchInLCIAMethods=Search in LCIA methods
+SearchInLCIAMethods=Search in impact assessment methods
+SearchInLCIACategories=Search in impact categories
 SearchInLocations=Search in locations
 SearchInParameters=Search in parameters
 SearchInProcesses=Search in processes
