Creation of a new Sankey Diagram.  - same Eclipse GEF framework as the Graph Model,   - better figure scaling, zoom, nodes' motion, focus, ...  - curved connections,  -  support for CSS themes,  - same layout as the Graph Model,  - possibility to change the orientation of the graph (north, east, ...).

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Jun 30 16:30:04 CEST 2022
+#Thu Sep 29 16:47:18 CEST 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -246,6 +246,7 @@ DoYouReallyWantToDelete=Do you really want to delete {0}
 DontShowSmallerThen=Don\u2018t show <
 Dot=Dot
 DownloadingData=Downloading data...
+East=East
 EcoSpold2Export=EcoSpold 2 Export
 EcoSpoldConfiguration=EcoSpold Configuration
 Economic=Economic
@@ -571,6 +572,7 @@ NormalizationAndWeightingSet=Normalization and weighting set
 NormalizationFactor=Normalization factor
 NormalizationWeighting=Normalization and weighting
 NormalizationWeightingSets=Normalization and weighting sets
+North=North
 NotAnIntegerNumber=The given value is not an integer number.
 NotApplicable=Not applicable
 Note=Note
@@ -750,8 +752,8 @@ SearchInCurrencies=Search in currencies
 SearchInDataQualitySystems=Search in data quality systems
 SearchInFlowProperties=Search in flow properties
 SearchInFlows=Search in flows
-SearchInLCIAMethods=Search in impact assessment methods
 SearchInLCIACategories=Search in impact categories
+SearchInLCIAMethods=Search in impact assessment methods
 SearchInLocations=Search in locations
 SearchInParameters=Search in parameters
 SearchInProcesses=Search in processes
@@ -821,6 +823,7 @@ Source=Source
 SourceFileDeleteQuestion=Do you really want to delete this file?
 SourceFileOverwriteFileQuestion=A file with the given name already exists in this database. Do you want to overwrite it?
 Sources=Sources
+South=South
 StandardDeviation=Standard deviation
 StandardDeviationFormula=Standard deviation (formula)
 Start=Start
@@ -923,6 +926,7 @@ WeightedSquaredAverage=Weighted squared average
 Weighting=Weighting
 WeightingFactor=Weighting factor
 Welcome=Welcome
+West=West
 Window=&Window
 With=with
 WithPassword=With password
