--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Thu Jun 30 16:30:04 CEST 2022
+#Thu Sep 29 16:47:18 CEST 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -216,6 +216,7 @@ DoNotShowThisMessageAgain=Ne plus montrer ce message
 DoYouReallyWantToDelete=Voulez-vous vraiment supprimer {0}
 Dot=Point
 DownloadingData=Chargement des donn\u00E9es
+East=Est
 EcoSpold2Export=Export EcoSpold 2
 EcoSpoldConfiguration=Configuration Ecopold
 Economic=Economique
@@ -504,6 +505,7 @@ NormalizationAndWeightingSet=Param\u00E8tre de normalisation / pond\u00E9ration
 NormalizationFactor=Facteur de normalisation
 NormalizationWeighting=Normalisation / Pond\u00E9ration
 NormalizationWeightingSets=Param\u00E8tres de normalisation / Pond\u00E9ration
+North=Nord
 NotAnIntegerNumber=La valeur entr\u00E9e n'est pas un nombre entier.
 NotApplicable=Inapplicable
 Note=Note
@@ -711,6 +713,7 @@ Source=Source
 SourceFileDeleteQuestion=Voulez-vous vraiment effacer ce fichier ?
 SourceFileOverwriteFileQuestion=Un fichier portant ce nom existe d\u00E9j\u00E0 dans cette base de donn\u00E9es. Voulez-vous le remplacer ?
 Sources=Sources
+South=Sud
 StandardDeviation=Ecart-type
 StandardDeviationFormula=Ecart-type (formule)
 Start=D\u00E9marrer
@@ -799,6 +802,7 @@ WeightedSquaredAverage=Moyenne pond\u00E9r\u00E9e au carr\u00E9
 Weighting=Pond\u00E9ration
 WeightingFactor=Facteur de pond\u00E9ration
 Welcome=Bienvenue
+West=Ouest
 Window=&Fen\u00EAtre
 With=avec
 WithPassword=Avec mot de passe
