message key and message are confusing
for the error when a user opens a database that was created or updated with
a newer openLCA version - not translated, just updated the keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -208,7 +208,7 @@ DatabaseContent=Database content
 DatabaseImport=Database import
 DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseName=Database name
-DatabaseNeedsUpdate=The given database is newer than this openLCA version.
+DatabaseNewerThanThisError=The database was created or updated with an openLCA version that is newer than your current version.
 DatabaseRenameError=The given name is not a valid or a database with this name already exists.
 DatabaseType=Database type
 DatabaseValidationCompleteNoErrorsWereFound=Database validation complete. No errors were found.
