--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -169,7 +169,7 @@ DatabaseContent=Contingut de la base de dades
 DatabaseImport=Importar base de dades
 DatabaseImportDescription=Importa dades des d'una base de dades existent a la base de dades activa
 DatabaseName=Nom de la base de dades
-DatabaseNeedsUpdate=La base de dades seleccionada correspon a una versi\u00F3 m\u00E9s nova d'openLCA.
+DatabaseNewerThanThisError=La base de dades seleccionada correspon a una versi\u00F3 m\u00E9s nova d'openLCA.
 DatabaseRenameError=El nom introdu\u00EFt
 DatabaseType=Tipus de base de dades
 DatabaseValidationCompleteNoErrorsWereFound=Validaci\u00F3 de la base de dades completa. No s'han trobat errors.
