--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -184,7 +184,7 @@ DatabaseContent=Datenbankinhalt
 DatabaseImport=Datenbankimport
 DatabaseImportDescription=Importiert Daten aus einer bestehenden Datenbank in die aktive Datenbank
 DatabaseName=Datenbankname
-DatabaseNeedsUpdate=Die Datenbank ist neuer als diese Version von openLCA.
+DatabaseNewerThanThisError=Die Datenbank ist neuer als diese Version von openLCA.
 DatabaseRenameError=Dieser Name ist nicht g\u00FCltig oder eine Datenbank mit diesem Namen existiert bereits.
 DatabaseType=Datenbanktyp
 DatabaseValidationCompleteNoErrorsWereFound=Datenbankvalidierung vollst\u00E4ndig. Es wurden keine Fehler gefunden.
