--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -181,7 +181,7 @@ DatabaseContent=Contenido de la base de datos
 DatabaseImport=Importar base de datos
 DatabaseImportDescription=Importa datos desde una base de datos existente a la base de datos activa
 DatabaseName=Nombre de la base de datos
-DatabaseNeedsUpdate=La base de datos seleccionada corresponde a una versi\u00F3n m\u00E1s nueva de openLCA.
+DatabaseNewerThanThisError=La base de datos seleccionada corresponde a una versi\u00F3n m\u00E1s nueva de openLCA.
 DatabaseRenameError=El nombre introducido no es v\u00E1lido o una base de datos con el mismo nombre ya existe.
 DatabaseType=Tipo de base de datos
 DatabaseValidationCompleteNoErrorsWereFound=Validaci\u00F3n de la base de datos completada. No se han encontrado errores.
