--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -181,7 +181,7 @@ DatabaseContent=Adatb\u00E1zis tartalom
 DatabaseImport=Adatb\u00E1zis import
 DatabaseImportDescription=Adatokat import\u00E1l egy megl\u00E9v\u0151 adatb\u00E1zisb\u00F3l a megnyitott adatb\u00E1zisba
 DatabaseName=Adatb\u00E1zis neve
-DatabaseNeedsUpdate=A kijel\u00F6lt adatb\u00E1zis \u00FAjabb, mint az openLCA jelen verzi\u00F3ja. 
+DatabaseNewerThanThisError=A kijel\u00F6lt adatb\u00E1zis \u00FAjabb, mint az openLCA jelen verzi\u00F3ja. 
 DatabaseRenameError=Az adott n\u00E9v nem \u00E9rv\u00E9nyes vagy m\u00E1r l\u00E9tezik ilyen nev\u0171 adatb\u00E1zis.
 DatabaseType=Adatb\u00E1zis t\u00EDpusa
 DatabaseValidationCompleteNoErrorsWereFound=Adatb\u00E1zis ellen\u0151rz\u00E9se k\u00E9sz. Nem t\u00F6rt\u00E9nt hiba.
