--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -174,7 +174,7 @@ DatabaseContent=Contenuto del database
 DatabaseImport=Importa database
 DatabaseImportDescription=Importa dati provenienti da un database esistente all'interno del database attivo
 DatabaseName=Nome del database
-DatabaseNeedsUpdate=Il database \u00E8 pi\u00F9 recente della versione di openLCA in uso.
+DatabaseNewerThanThisError=Il database \u00E8 pi\u00F9 recente della versione di openLCA in uso.
 DatabaseRenameError=Il nome scelto non \u00E8 valido o esiste gi\u00E0 un database con lo stesso nome.
 DatabaseType=Tipo di database
 DatabaseValidationCompleteNoErrorsWereFound=Validazione del database completata. Non sono stati trovati errori.
