--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -181,7 +181,7 @@ DatabaseContent=Conte\u00FAdo do banco de dados
 DatabaseImport=Importar base de dados
 DatabaseImportDescription=Importa dados, de um banco de dados existente para um banco de dados ativo
 DatabaseName=Nome do banco de dados
-DatabaseNeedsUpdate=O determinado banco de dados \u00E9 mais novo que esta vers\u00E3o openLCA.
+DatabaseNewerThanThisError=O determinado banco de dados \u00E9 mais novo que esta vers\u00E3o openLCA.
 DatabaseRenameError=O nome n\u00E3o \u00E9 v\u00E1lido ou j\u00E1 existe um banco de dados com este nome.
 DatabaseType=Tipo de base de dados
 DatabaseValidationCompleteNoErrorsWereFound=Valida\u00E7\u00E3o do banco de dados conclu\u00EDda. Nenhum erro foi encontrado.
