--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -181,7 +181,7 @@ DatabaseContent=\u8CC7\u6599\u5EAB\u5167\u5BB9
 DatabaseImport=\u8CC7\u6599\u5EAB\u532F\u5165
 DatabaseImportDescription=\u532F\u5165\u73FE\u6709\u8CC7\u6599\u5EAB\u5167\u5BB9\u81F3\u5DF2\u958B\u555F\u7684\u8CC7\u6599\u5EAB
 DatabaseName=\u8CC7\u6599\u5EAB\u540D\u7A31
-DatabaseNeedsUpdate=\u4F60\u7D66\u7684\u8CC7\u6599\u5EAB\u6BD4openLCA\u7684\u7248\u672C\u9084\u65B0
+DatabaseNewerThanThisError=\u4F60\u7D66\u7684\u8CC7\u6599\u5EAB\u6BD4openLCA\u7684\u7248\u672C\u9084\u65B0
 DatabaseRenameError=\u4F60\u7D66\u7684\u540D\u7A31\u662F\u7121\u6548\u7684\u6216\u662F\u8CC7\u6599\u5EAB\u540D\u7A31\u5DF2\u5B58\u5728
 DatabaseType=\u8CC7\u6599\u5EAB\u985E\u578B
 DatabaseValidationCompleteNoErrorsWereFound=\u8CC7\u6599\u5EAB\u5B8C\u6210\u9A57\u8B49\uFF0C\u6C92\u6709\u767C\u73FE\u932F\u8AA4
