Add message for the sticky note actions.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Sep 29 16:47:18 CEST 2022
+#Wed Oct 26 17:48:50 CEST 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -17,6 +17,7 @@ AddOutputFlow=Add output flow
 AddProcess=Add process
 AddScore=Add score
 AddSection=Add section
+AddStickyNote=Add sticky note
 AddToMethodParameters=Add to method parameters
 AddedValue=Added value
 AdditionalInformation=Additional information
@@ -252,6 +253,7 @@ EcoSpoldConfiguration=EcoSpold Configuration
 Economic=Economic
 Edit=Edit
 EditFlow=Edit flow
+EditStickyNote=Edit sticky note
 ElementaryFlow=Elementary flow
 Email=Email
 EmptyDatabase=Empty database
