--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Thu Sep 29 16:47:18 CEST 2022
+#Wed Oct 26 17:48:50 CEST 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -14,6 +14,7 @@ AddOutputFlow=Ajouter un flux sortant
 AddProcess=Ajouter un proc\u00E9d\u00E9
 AddScore=Ajouter un score
 AddSection=Ajouter une section
+AddStickyNote=Ajouter une note
 AddToMethodParameters=Ajouter aux param\u00E8tres de m\u00E9thode
 AddedValue=Valeur ajout\u00E9e
 AdditionalInformation=Informations suppl\u00E9mentaires
@@ -222,6 +223,7 @@ EcoSpoldConfiguration=Configuration Ecopold
 Economic=Economique
 Edit=Modifier
 EditFlow=Modifier le flux
+EditStickyNote=Modifier la note
 ElementaryFlow=Flux primaire
 Email=E-mail
 EmptyDatabase=Base de donn\u00E9es vide
