Add min/max actions for selection and place the min/max all action into the toolbar.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -481,7 +481,7 @@ Mark=Mark
 MarkAsMerged=Mark as merged
 MatrixExport=Matrix Export
 MatrixFiles=Matrix files
-Maximize=maximize
+Maximize=Maximize
 MaximizeAll=Maximize all
 Maximum=Maximum
 MaximumFormula=Maximum (formula)
@@ -496,7 +496,7 @@ Merge=Merge
 Message=Message
 Methods=Methods
 MinimalTree=minimal tree
-Minimize=minimize
+Minimize=Minimize
 MinimizeAll=Minimize all
 Minimum=Minimum
 MinimumFormula=Minimum (formula)
