--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
