--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
