--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -419,7 +419,7 @@ Mark=Marquer
 MarkAsMerged=Marquer comme fusionn\u00E9
 MatrixExport=Export de matrice
 MatrixFiles=Fichiers de matrice
-Maximize=agrandir
+Maximize=Agrandir
 MaximizeAll=Tout agrandir
 Maximum=Maximum
 MaximumFormula=Maximum (formule)
@@ -433,7 +433,7 @@ MemoryToLowMessage=La valeur entr\u00E9e doit \u00EAtre au moins de 256Mo.
 Message=Message
 Methods=M\u00E9thodes
 MinimalTree=arbre minimal
-Minimize=r\u00E9duire
+Minimize=R\u00E9duire
 MinimizeAll=Tout r\u00E9duire
 Minimum=Minimum
 MinimumFormula=Minimum (formule)
