--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -403,7 +403,7 @@ Mark=Contrassegna
 MarkAsMerged=Contrassegna come unito
 MatrixExport=Esporta la matrice
 MatrixFiles=Files della matrice
-Maximize=massimizza
+Maximize=Massimizza
 MaximizeAll=Massimizza tutto
 Maximum=Massimo
 MaximumFormula=Massimo (Formula)
@@ -417,7 +417,7 @@ MemoryToLowMessage=Il valore di memoria deve essere almeno 256 MB.
 Message=Messaggio
 Methods=Metodi
 MinimalTree=albero minimo
-Minimize=minimizza
+Minimize=Minimizza
 MinimizeAll=Minimizza tutto
 Minimum=Minimo
 MinimumFormula=Minimo (Formula)
