--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -362,7 +362,7 @@ Mark=\u0130\u015Faretle
 MarkAsMerged=Birle\u015Ftirilmi\u015F olarak i\u015Faretle
 MatrixExport=Matris d\u0131\u015Fa aktar\u0131m\u0131
 MatrixFiles=Matris dosyalar\u0131
-Maximize=azamiye \u00E7\u0131kar
+Maximize=Azamiye \u00E7\u0131kar
 MaximizeAll=T\u00FCm\u00FCn\u00FC azamiye \u00E7\u0131kar
 Maximum=Azami
 MaximumFormula=Azami (form\u00FCl)
@@ -375,7 +375,7 @@ MemoryToHighMessage=Haf\u0131za de\u011Feri, i\u015Fletim sisteminiz i\u00E7in \
 MemoryToLowMessage=Haf\u0131za de\u011Feri en az 256 MB olmal\u0131d\u0131r.\u00A0
 Methods=Metotlar
 MinimalTree=asgari a\u011Fa\u00E7
-Minimize=asgariye indir
+Minimize=Asgariye indir
 MinimizeAll=T\u00FCm\u00FCn\u00FC asgariye indir
 Minimum=Asgari
 MinimumFormula=Asgari (form\u00FCl)
