--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Wed Oct 26 17:48:50 CEST 2022
+#Mon Nov 21 18:27:44 CET 2022
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
